rnd, font size change, refactor, fix bug preferences

--- a/res/i18nSwingSkin_en_US.properties
+++ b/res/i18nSwingSkin_en_US.properties
@@ -1,1 +1,19 @@
 lookfeelframe.title=Look and Feel Frame
+lookandfeel.addfavorite    = Add current skin to favorites
+lookandfeel.addfavorite.tip    = Add currently selected skin to list of favorites
+lookandfeel.favorite       = Favorites
+lookandfeel.favorite.tip       = Favorites
+lookandfeel.main           = Skins
+lookandfeel.main.tip           = Skins
+lookandfeel.others         = Others
+lookandfeel.others.tip         = Others
+lookandfeel.removefavorite = Remove current skin from favorite
+lookandfeel.removefavorite.tip = Remove current skin from favorite
+lookandfeel.system         = System
+lookandfeel.system.tip =The default skins provided by the Java System
+lookandfeel.random=Random
+lookandfeel.random.tip=Choose a skin at random
+lookandfeel.font.increase=Font Size Increase
+lookandfeel.font.increase.tip=Increases the font size if not at its maximum
+lookandfeel.font.decrease=Font Size Decrease
+lookandfeel.font.decrease.tip=Decreases the font size if not at its minimum
