--- a/res/i18nSwingSkin_fr_FR.properties
+++ b/res/i18nSwingSkin_fr_FR.properties
@@ -1,1 +1,19 @@
-lookfeelframe.title=Look and Feel Frame
+lookfeelframe.title=Look and Feel Fenêtre
+lookandfeel.addfavorite    = Ajouter la peau actuelle aux favoris
+lookandfeel.addfavorite.tip    = Ajouter la peau existante aux favoris
+lookandfeel.favorite       = Favoris
+lookandfeel.favorite.tip       = Favoris
+lookandfeel.main           = Peaux
+lookandfeel.main.tip           = Peaux
+lookandfeel.others         = Autres
+lookandfeel.others.tip         = Autres
+lookandfeel.removefavorite = Retirer la peau actuelle des favoris
+lookandfeel.removefavorite.tip = Retirer la peau actuelle des favoris
+lookandfeel.system         = Système
+lookandfeel.system.tip =Les peaux par défaut définies au niveau du système Java
+lookandfeel.random=Hazard
+lookandfeel.random.tip=Choisi une peau au hazard
+lookandfeel.font.increase=Taille de la police : augmenter
+lookandfeel.font.increase.tip=Augmente la taille de la police
+lookandfeel.font.decrease=Taille de la police : diminuer
+lookandfeel.font.decrease.tip=Diminue la taille de la police
