--- a/res/i18nSwingSkin_en_US.properties
+++ b/res/i18nSwingSkin_en_US.properties
@@ -7,6 +7,8 @@ lookandfeel.main           = Skins
 lookandfeel.main.tip           = Skins
 lookandfeel.others         = Others
 lookandfeel.others.tip         = Others
+lookandfeel.flat         = Flat Laf
+lookandfeel.others.tip         = Flat skin inspired by IntelliJ Idea adapted by Karl Tauber
 lookandfeel.removefavorite = Remove current skin from favorite
 lookandfeel.removefavorite.tip = Remove current skin from favorite
 lookandfeel.system         = System
