fix flat.tip string

--- a/res/i18nSwingSkin_en_US.properties
+++ b/res/i18nSwingSkin_en_US.properties
@@ -8,7 +8,7 @@ lookandfeel.main.tip           = Skins
 lookandfeel.others         = Others
 lookandfeel.others.tip         = Others
 lookandfeel.flat         = Flat Laf
-lookandfeel.others.tip         = Flat skin inspired by IntelliJ Idea adapted by Karl Tauber
+lookandfeel.flat.tip         = Flat skin inspired by IntelliJ Idea adapted by Karl Tauber
 lookandfeel.removefavorite = Remove current skin from favorite
 lookandfeel.removefavorite.tip = Remove current skin from favorite
 lookandfeel.system         = System
